# android_sample

./: .gitignore  build.gradle.kts  config.gradle  settings.gradle.kts  virogu-test.jks
AIDLTest/: build.gradle.kts
AIDLTest/src/main/: AndroidManifest.xml
CardViewPager/: build.gradle.kts  settings.gradle
CardViewPager/app/: build.gradle
CardViewPager/gradle/wrapper/: gradle-wrapper.properties
CardViewPager/src/main/: AndroidManifest.xml
Libs/: .gitignore  settings.gradle
Libs/app/: build.gradle
Libs/app/libs/: permission-release.aar
Libs/cardviewpager/: build.gradle
Libs/customview/: build.gradle
Libs/gradle/wrapper/: gradle-wrapper.properties
Libs/permission/: build.gradle
MotionDemo-master/: build.gradle.kts
MotionDemo-master/app/: local.properties
MotionDemo-master/gradle/wrapper/: gradle-wrapper.properties
MotionDemo-master/src/main/: AndroidManifest.xml
MotionLayout/: build.gradle.kts
MotionLayout/app/: build.gradle
MotionLayout/gradle/wrapper/: gradle-wrapper.properties
MotionLayout/src/main/: AndroidManifest.xml
MySerialPort/: build.gradle.kts  proguard-rules.pro
MySerialPort/src/main/: AndroidManifest.xml
OverlayRecyView/: build.gradle.kts  settings.gradle
OverlayRecyView/app/: build.gradle
OverlayRecyView/gradle/wrapper/: gradle-wrapper.properties
OverlayRecyView/src/main/: AndroidManifest.xml
Paging/app/: build.gradle
Paging/gradle/wrapper/: gradle-wrapper.properties
Paging3/: build.gradle.kts
RecyclerSelection/: build.gradle.kts  settings.gradle
RecyclerSelection/app/: build.gradle
SerialPortDemo/: CMakeLists.txt  build.gradle.kts
TestApp/: build.gradle.kts
base/: build.gradle.kts
common/: build.gradle.kts
emptyapp/: build.gradle.kts
emptyapp/libs/: xlog-release.aar
gradle/wrapper/: gradle-wrapper.properties
materialdemo/: build.gradle.kts
nativelib/: build.gradle.kts
nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
rvpayload/: build.gradle.kts
systemAlert/: build.gradle.kts
xlog/: build.gradle.kts
(+316 files in other folders)
